tests/snapshots/lib__snapshots__report@invalid-target.env_filter.snap
---
source: tests/snapshots.rs
assertion_line: 73
expression: crate=target=warn
---

  ⚠ 1 directives were ignored as invalid

Error: tracing_filter::simple::Warning::InvalidTarget

  ⚠ invalid target directive specified
   ╭────
 1 │ crate=target=warn
   · ──────┬─────
   ·       │╰── this `=` is not allowed ...
   ·       ╰── ... in this target directive
   ╰────

